SERVER-127943 Set `_hasMultiKeyMetadataKeys` when resuming index build (#54822)

GitOrigin-RevId: 082c6350a5da922c804dc636b3b4b6c910e5862a